# psycopg2-pgevents

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  README.rst  client.py  consumer.py  database_setup.sql  pgnotify.sql  producer.py  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/: auto_assign.yml
.github/workflows/: build.yaml  pipeline.yaml  pull-request.yaml  release.yaml  workflow-pr.yaml
psycopg2_pgevents/: __about__.py  __init__.py  db.py  debug.py  event.py  sql.py  trigger.py  validation.py
sqlalchemy_pgevents/: __about__.py  __init__.py  base.py  event.py  trigger.py
tests/: conftest.py  test_base.py  test_db.py  test_debug.py  test_event.py  test_sql.py  test_trigger.py
